# static-host-plugin

./: CONSEQUENCES.md  README.md  cabal.project  flake.nix  ghc-issue-draft.md
myexe/: myexe.cabal
myexe/app/: GitRev.hs  Main.hs
myexe/app/Runtime/: Linker.hs
myexe/cbits/: rev.c
mylib/: mylib.cabal
mylib/src/: MyLib.hs
