cabal-version: 3.0
name:          myexe
version:       0.1.0.0
build-type:    Simple

executable myexe
  main-is:       Main.hs
  other-modules:
    GitRev
    Runtime.Linker
  hs-source-dirs: app
  c-sources:     cbits/rev.c
  build-depends:
    base >= 4.14 && < 5,
    containers,
    text,

  default-language: Haskell2010
