cabal-version: 3.0
name:          mylib
version:       0.1.0.0
build-type:    Simple

library
  exposed-modules:
    MyLib

  hs-source-dirs:  src
  build-depends:
    base >= 4.14 && < 5,
    proto-lens >= 0.7.1.6,
    proto-lens-protobuf-types,
    proto-lens-runtime,
    rio,

  default-extensions:
    OverloadedStrings

  default-language: Haskell2010
